--- a/app/views/answer_comments/_form.html.erb
+++ b/app/views/answer_comments/_form.html.erb
@@ -13,17 +13,17 @@
 
 <p>
 <%= f.label :content %><br />
-<%= f.text_field :content %>
+<%= f.text_field :content, :size => 60 %>
 </p>
 
 <p>
 <%= f.label :user_id %><br />
-<%= f.number_field :user_id %>
+<%= f.select :user_id, User.all.collect {|x| [x.email, x.id]} %>
 </p>
 
 <p>
 <%= f.label :answer_id %><br />
-<%= f.number_field :answer_id %>
+<%= f.select :answer_id, Answer.all.collect {|x| [x.content, x.id]} %>
 </p>
 
   <div class="actions">
