--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,24 @@
  *= require_tree .
  *= require_self
  */
+ 
+div#container{
+	
+}
+
+div#title{
+	float: left;
+	clear: both;
+	width: 100%;
+	height: 75px;
+}
+
+div#sidebar{
+	float: left;
+	width: 190px;
+	padding: 5px;
+}
+div#main{
+	float: left;
+	padding: 5px;
+}
