--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,35 @@
 </head>
 <body>
 
+<div id="container">
+<div id="title">
+<h1>Stack Underflow</h1>
+<p>Find me in app/views/pages/index.html.erb</p>
+</div>
+<div id="sidebar">
+<h2>Sign in</h2>
+<ul>
+	<% if current_user %>
+	<li>Signed in as: <%= current_user.email %></li>
+	<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+	<% else %>
+	<li><%= link_to "Sign In", new_user_session_path %></li>
+	<% end %>
+</ul>
+<h2>Links</h2>
+<ul>
+	<li><%= link_to "Answers", answers_path %></li>
+	<li><%= link_to "Answer Comments", answer_comments_path %></li>
+	<li><%= link_to "Answer Votes", answer_votes_path %></li>
+	<li><%= link_to "Questions", questions_path %></li>
+	<li><%= link_to "Question Comments", question_comments_path %></li>
+	<li><%= link_to "Question Votes", question_votes_path %></li>
+</ul>
+</div>
+<div id="main">
 <%= yield %>
+</div>
+</div>
 
 </body>
 </html>
