--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,8 @@
  */
  
 div#container{
-	
+	width: 900px;
+	margin: auto;
 }
 
 div#title{
@@ -23,14 +24,18 @@ div#title{
 	clear: both;
 	width: 100%;
 	height: 75px;
+	background-color: #dcdcdc;
 }
 
 div#sidebar{
 	float: left;
 	width: 190px;
 	padding: 5px;
+	background-color: #fffafa;
 }
 div#main{
 	float: left;
-	padding: 5px;
+	padding: 10px;
+	width: 680px;
+	background-color: #f5f5f5;
 }
