--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
 </ul>
 <h2>Links</h2>
 <ul>
+	<li><%= link_to "Top", root_path %></li>
 	<li><%= link_to "Answers", answers_path %></li>
 	<li><%= link_to "Answer Comments", answer_comments_path %></li>
 	<li><%= link_to "Answer Votes", answer_votes_path %></li>
