--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,11 +31,22 @@ div#sidebar{
 	float: left;
 	width: 190px;
 	padding: 5px;
-	background-color: #fffafa;
+	background-color: #f0f0f0;
 }
 div#main{
 	float: left;
 	padding: 10px;
 	width: 680px;
-	background-color: #f5f5f5;
+	background-color: #fcfcfc;
+}
+
+td.center{
+	text-align: center;
+	width: 40px;
+}
+td.answers{
+	color: crimson;
+}
+td.views{
+	color: dimgray;
 }
