--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>StackUnderflow</title>
+  <title>Stack Underflow</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -17,7 +17,7 @@
 <h2>Sign in</h2>
 <ul>
 	<% if current_user %>
-	<li>Signed in as: <%= current_user.email %></li>
+	<li>Signed in as: <%= link_to (current_user.name.nil? ? "No name" : current_user.name), edit_user_registration_path %></li>
 	<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
 	<% else %>
 	<li><%= link_to "Sign In", new_user_session_path %></li>
