--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -20,5 +20,19 @@
   <%= @question.content %>
 </p>
 
+<p><strong>Comment:</strong></p>
+<ul>
+  <% @question.question_comments.each do |comment| %>
+    <li><%= comment.content %></li>
+  <% end %>
+</ul>
+
+<p><strong>Answer:</strong></p>
+<ul>
+  <% @question.answers.each do |answer| %>
+    <li><%= answer.content %></li>
+  <% end %>
+</ul>
+
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back', questions_path %>
