change answer index/show

--- a/app/views/answer_comments/show.html.erb
+++ b/app/views/answer_comments/show.html.erb
@@ -6,12 +6,12 @@
 </p>
 
 <p>
-<b>User ID: </b><br />
-<%= @answer_comment.user_id %>
+<b>User Name: </b><br />
+<%= @answer_comment.user.name %>
 </p>
 
 <p>
-<b>Answer ID: </b><br />
+<b>Answer: </b><br />
 <%= @answer_comment.answer_id %>
 </p>
 
