--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -6,13 +6,13 @@
 </p>
 
 <p>
-<b>User ID: </b><br />
-<%= @answer.user_id %>
+<b>User Name: </b><br />
+<%= @answer.user.name %>
 </p>
 
 <p>
-<b>Question ID: </b><br />
-<%= @answer.question_id %>
+<b>Question Title: </b><br />
+<%= @answer.question.title %>
 </p>
 
 <h2>Answer Votes</h2>
