--- a/app/views/answer_comments/index.html.erb
+++ b/app/views/answer_comments/index.html.erb
@@ -4,8 +4,8 @@
   <thead>
     <tr>
       <th>content</th>
-      <th>user_id</th>
-      <th>answer_id</th>
+      <th>user</th>
+      <th>answer</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,7 +14,7 @@
     <% @answer_comments.each do |answer_comment| %>
       <tr>
         <td><%= answer_comment.content %></td>
-        <td><%= answer_comment.user_id %></td>
+        <td><%= answer_comment.user.name %></td>
         <td><%= answer_comment.answer_id %></td>
         <td><%= link_to 'Show', answer_comment %></td>
         <td><%= link_to 'Edit', edit_answer_comment_path(answer_comment) %></td>
