--- a/app/views/answer_votes/show.html.erb
+++ b/app/views/answer_votes/show.html.erb
@@ -6,12 +6,12 @@
 </p>
 
 <p>
-<b>User ID: </b><br />
-<%= @answer_vote.user_id %>
+<b>User Name: </b><br />
+<%= @answer_vote.user.name %>
 </p>
 
 <p>
-<b>Answer ID: </b><br />
+<b>Answer: </b><br />
 <%= @answer_vote.answer_id %>
 </p>
 
