--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -4,8 +4,8 @@
   <thead>
     <tr>
       <th>content</th>
-      <th>user_id</th>
-      <th>question_id</th>
+      <th>user</th>
+      <th>question title</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +14,8 @@
     <% @answers.each do |answer| %>
       <tr>
         <td><%= answer.content %></td>
-        <td><%= answer.user_id %></td>
-        <td><%= answer.question_id %></td>
+        <td><%= answer.user.name %></td>
+        <td><%= answer.question.title %></td>
         <td><%= link_to 'Show', answer %></td>
         <td><%= link_to 'Edit', edit_answer_path(answer) %></td>
         <td><%= link_to 'Destroy', answer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
