--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -6,7 +6,7 @@
   <%= button_tag "+" %> <%= @question.total_points %> <%= button_tag "-" %>
 </p>
 <p>
-  <%= @question.content %>
+  <%=br @question.content %>
 </p>
 
 <h3>Comments</h3>
