--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
 <div id="container">
 <div id="title">
 <h1>Stack Underflow</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<p>stack overflow modoki</p>
+<p id="notice"><%= notice %></p>
 </div>
 <div id="sidebar">
 <h2>Sign in</h2>
