--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @answers.each do |answer| %>
       <tr>
-        <td><%= answer.content %></td>
+        <td><%=br answer.content %></td>
         <td><%= answer.user.name %></td>
         <td><%= answer.question.title %></td>
         <td><%= link_to 'Show', answer %></td>
