--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -20,7 +20,7 @@
 
 <table class="answers-table">
   <tr>
-    <td class="vote-area"><%= button_to "+", upvote_answer_path(answer) %><br /><%= answer.total_points %><br /><%= button_to "-", downvote_answer_path(answer) %></td>
+    <td class="vote-area"><%= button_to "+", upvote_answer_path(answer) %><%= answer.total_points %><%= button_to "-", downvote_answer_path(answer) %></td>
     <td class="answer-content-area">
       <p><%=br answer.content %></p>
       <p>by <%= answer.user && answer.user.name %></p>
