--- a/app/views/answer_votes/index.html.erb
+++ b/app/views/answer_votes/index.html.erb
@@ -14,7 +14,7 @@
     <% @answer_votes.each do |answer_vote| %>
       <tr>
         <td><%= answer_vote.value %></td>
-        <td><%= answer_vote.user.name %></td>
+        <td><%= answer_vote.user && answer_vote.user.name %></td>
         <td><%= answer_vote.answer_id %></td>
         <td><%= link_to 'Show', answer_vote %></td>
         <td><%= link_to 'Edit', edit_answer_vote_path(answer_vote) %></td>
