answer from question

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -14,14 +14,18 @@
   <% end %>
 </ul>
 
+<% if !current_user.nil? %>
 <%= form_for @comment do |f| %>
-Comment: <%= f.text_field :content, :size => 45 %><br />
+Comment: <%= f.text_field :content, :size => 45 %>
 <% @comment.user_id = current_user ? current_user.id : 0 %>
 <%= f.hidden_field :user_id %>
 <%= f.hidden_field :question_id %>
 <%= f.button "Submit" %>
 <% end %>
 <!-- <p><%= link_to "New comment", :action => "new_comment"%></p> -->
+<% else %>
+<p>Please log in to comment.</p>
+<% end %>
 
 <h3>Answers</h3>
 <% @question.answers.each do |answer| %>
@@ -44,5 +48,19 @@ Comment: <%= f.text_field :content, :size => 45 %><br />
 </table>
 <% end %>
 
-<%= link_to 'Edit', edit_question_path(@question) %> |
+<% if !current_user.nil? %>
+<h4>Submit your answer</h4>
+<%= form_for @answer do |f| %>
+<%= f.text_area :content, :rows => 8, :cols => 45 %><br />
+<% @answer.user_id = current_user.id %>
+<%= f.hidden_field :user_id %>
+<%= f.hidden_field :question_id %>
+<%= f.button "Submit" %>
+<% end %>
+<% else %>
+<p>Please log in to answer.</p>
+<% end %>
+
+<p>
 <%= link_to 'Back', questions_path %>
+</p>
