--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -14,8 +14,8 @@
     <% @answers.each do |answer| %>
       <tr>
         <td><%=br answer.content %></td>
-        <td><%= answer.user.name %></td>
-        <td><%= answer.question.title %></td>
+        <td><%= answer.user && answer.user.name %></td>
+        <td><%= answer.question && answer.question.title %></td>
         <td><%= link_to 'Show', answer %></td>
         <td><%= link_to 'Edit', edit_answer_path(answer) %></td>
         <td><%= link_to 'Destroy', answer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
