--- a/app/views/question_comments/index.html.erb
+++ b/app/views/question_comments/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @question_comments.each do |question_comment| %>
       <tr>
-        <td><%= question_comment.question.title %></td>
+        <td><%= question_comment.question && question_comment.question.title %></td>
         <td><%= question_comment.user && question_comment.user.name %></td>
         <td><%= question_comment.content %></td>
         <td><%= link_to 'Show', question_comment %></td>
