question page layout

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,7 +51,7 @@ td.views{
 	color: dimgray;
 }
 
-table.answers-table{
+table.answers-table, table.questions-table{
 	width: 95%;
 }
 td.vote-area{
