--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,7 +3,13 @@
 <table class="question-table">
   <tr>
     <td class="vote-area">
-      <%= button_to "+", upvote_question_path(@question) %> <%= @question.total_points %> <%= button_to "-", downvote_question_path(@question) %>
+      <% if !current_user.nil? %>
+        <%= button_to "+", upvote_question_path(@question) %>
+      <% end %>
+      <%= @question.total_points %>
+      <% if !current_user.nil? %>
+        <%= button_to "-", downvote_question_path(@question) %>
+      <% end %>
     </td>
     <td class="question-content-area">
       <%=br @question.content %>
@@ -41,7 +47,15 @@ Comment: <%= f.text_field :content, :size => 45 %>
 
 <table class="answers-table">
   <tr>
-    <td class="vote-area"><%= button_to "+", upvote_answer_path(answer) %><%= answer.total_points %><%= button_to "-", downvote_answer_path(answer) %></td>
+    <td class="vote-area">
+      <% if !current_user.nil? %>
+        <%= button_to "+", upvote_answer_path(answer) %>
+      <% end %>
+      <%= answer.total_points %>
+      <% if !current_user.nil? %>
+        <%= button_to "-", downvote_answer_path(answer) %>
+      <% end %>
+    </td>
     <td class="answer-content-area">
       <p><%=br answer.content %></p>
       <p>by <%= answer.user && answer.user.name %></p>
