User list and user profile page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,10 @@
 <h2>Links</h2>
 <ul>
 	<li><%= link_to "Top", root_path %></li>
+	<li><%= link_to "Users", users_path %></li>
+</ul>
+<h2>Admin Functions</h2>
+<ul>
 	<li><%= link_to "Answers", answers_path %></li>
 	<li><%= link_to "Answer Comments", answer_comments_path %></li>
 	<li><%= link_to "Answer Votes", answer_votes_path %></li>
