--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h2>User: <%= @user.name %></h2>
+<h2><%= @user.name %>(<%= @user.total_points %>)</h2>
 
 <table>
 	<tr>
@@ -14,6 +14,11 @@
 		<td><%= @user.email %></td>
 	</tr>
 </table>
+
+<h3>Points</h3>
+<p>
+Questions(<%= @user.question_points %>) + Answers(<%= @user.answer_points %>) = <%= @user.total_points %>
+</p>
 
 <h3>Questions</h3>
 <table>
