--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 	<li><%= link_to "Top", root_path %></li>
 	<li><%= link_to "Users", users_path %></li>
 </ul>
-<%= if current_user && current_user.id == 1 %>
+<% if current_user && current_user.id == 1 %>
 <h2>Admin Functions</h2>
 <ul>
 	<li><%= link_to "Answers", answers_path %></li>
