question view fix

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -97,5 +97,5 @@ Comment: <%= f.text_field :content, :size => 45 %>
 <% end %>
 
 <p>
-<%= link_to 'Back', questions_path %>
+<%= link_to 'Back', root_path %>
 </p>
